<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="edit_last">\u0027Edit Last:\u0027 yy-MM-dd HH:MM</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="adefault">[Default]</string>
	<string name="ope">Open</string>
	<string name="disk">Hard Disk</string>
	<string name="floppy">Floppy Disk</string>
	<string name="cdrom">CD-ROM</string>
	<string name="floppy_b">Floppy Disk B</string>
	<string name="display_options">Display Options</string>
	<string name="floppy_a">Floppy Disk A</string>
	<string name="dns">DNS Server</string>
	<string name="network_card">Network Card</string>
	<string name="network_type">Network Type</string>
	<string name="vlan">VLAN</string>
	<string name="mac_addr">MAC Address</string>
	<string name="name">Name</string>
	<string name="network">Network</string>
	<string name="removable_storage">Removable Storage</string>
	<string name="soundhw">Sound Card</string>
	<string name="display">Video Display</string>
	<string name="disk_a">Hard Disk A</string>
	<string name="disk_b">Hard Disk B</string>
	<string name="disk_c">Hard Disk C</string>
	<string name="disk_d">Hard Disk D</string>
	<string name="storage">Storage</string>
	<string name="append">Append</string>
	<string name="app_name">Qemu Launcher</string>
	<string name="initrd">Initrd</string>
	<string name="kernel">Kernel</string>
	<string name="boot_device">Boot from Device</string>
	<string name="boot_options">Boot Options</string>
	<string name="memory">RAM Size(M)</string>
	<string name="smp_cpus">CPU Cores</string>
	<string name="cpu">CPU Model</string>
	<string name="architecture">Architecture</string>
	<string name="cpu_board">CPU/Board</string>
	<string name="machine">Machine Type</string>
	<string name="save">Save</string>
	<string name="delete">Delete</string>
	<string name="select_config">Select a
		configuration</string>
	<string name="ie">ie:root=/dev/</string>
	<string name="advanced">Advanced</string>
	<string name="loadvm">Load Snapshot</string>
	<string name="graphics_interface">Graphics Interface</string>
	<string name="port">Port</string>
	<string name="extra_params">Extra Params</string>
	<string name="run">Run</string>
	<string name="img_toolbox">Image Toolbox</string>
	<string name="create_new_img">Create New Disk</string>
	<string name="img_info">Image Info</string>
	<string name="resize_img">Resize Image</string>
	<string name="convert_format">Convert Format</string>
	<string name="install_title">Install QEMU</string>
	<string name="remove_title">Remove QEMU</string>
	<string name="download_res">Download Resources</string>
	<string name="close_tap">Close TAP Network</string>
	<string name="help_documentations">Help Documentations</string>
	<string name="none">None</string>
	<string name="open">Open...</string>
	<string name="imgname">Image Name</string>
	<string name="imgpath">Image Path</string>
	<string name="imgsize">Image Size</string>
	<string name="newfile">File Name</string>
	<string name="csize">Resize</string>
	<string name="output_file_name">Output File Name</string>
	<string name="output_dir">Output Directory</string>
	<string name="perform">Perform</string>
	<string name="compress">Compress</string>
	<string name="newf">New</string>
	<string name="addnew">Add New Configuration</string>
	<string name="install">Do you want to install QEMU now?</string>
	<string name="resizing">Resizing...</string>
	<string name="operation_completed">Operation completed !</string>
	<string name="operation_error">Operation failed !</string>
	<string name="sure_to_delete">Do you want to delete this configuration?</string>
	<string-array name="bt">
		<item>@string/adefault</item>
		<item>@string/floppy</item>
		<item>@string/disk</item>
		<item>@string/cdrom</item>
	</string-array>
	<string name="dir">\u003cDIR\u003e</string>
	<string name="jump_to_path">Jump to path</string>
	<string name="select_dir">Select Dir</string>
	<string name="choose_file">Select a File</string>
	<string name="app_ver">Version %s</string>
	<string name="find">Find</string>
	<string name="about_text">This application configures the qemu-system visually and runs the virtual system.\n\nby Rainbow(QQ:<a href="mqqapi://card/show_pslcard?src_type=internal&amp;version=1&amp;uin=3299129491&amp;card_type=person&amp;source=sharecard">3299129491</a>)</string>
	<string name="home">Home</string>
	<string name="find_last">LAST</string>
	<string name="find_next">NEXT</string>
	<string name="path_invalid">Invalid path.</string>
	<string name="empty_text_netcards">No network cards</string>
	<string name="empty_summary_netcards">Click \u0022+\u0022 to add one</string>
	<string name="empty_text_main">No configurations</string>
	<string name="empty_summary_main">Click \u0022+\u0022 to add one</string>
	<string name="mouse_fixed">Mouse fixed</string>
	<string name="log">Log</string>
	<string name="view_log">View Log</string>
	<string name="clear_log">Clear Logs</string>
	<string name="copied">Copied</string>
	<string name="converting">Converting...</string>
	<string name="uncompressing">Uncompressing...</string>
	<string name="creating">Creating...</string>
	<string name="running">VM Running</string>
	<string name="vm_stopped">VM Stopped</string>
	<string name="vm_unstopped">VM Unstopped</string>
	<string name="run_err">Runtime Error</string>
	<string name="output_device">Output Device</string>
	<string-array name="graphics_values">
		<item>vnc</item>
		<item>spice</item>
		<item>sdl</item>
	</string-array>
	<string-array name="graphics">
		<item>VNC</item>
		<item>SPICE</item>
		<item>SDL</item>
	</string-array>
	<string-array name="net_types">
		<item>@string/none</item>
		<item>USER</item>
		<item>TUN/TAP</item>
	</string-array>
	<string-array name="net_type_values">
		<item>none</item>
		<item>user</item>
		<item>tap</item>
	</string-array>
	<string-array name="boot_first">
		<item>@string/adefault</item>
		<item>@string/floppy_a</item>
		<item>@string/floppy_b</item>
		<item>@string/disk</item>
		<item>@string/cdrom</item>
	</string-array>
	<string-array name="boot_first_values">
		<item></item>
		<item>a</item>
		<item>b</item>
		<item>c</item>
		<item>d</item>
	</string-array>
	<string-array name="disk_format">
		<item>qcow</item>
		<item>qcow2</item>
		<item>vdi</item>
		<item>vmdk</item>
	</string-array>
	<string-array name="bit_unit">
		<item>B</item>
		<item>K</item>
		<item>M</item>
		<item>G</item>
		<item>T</item>
	</string-array>
	<string-array name="adjust_orientation">
		<item>+</item>
		<item>-</item>
	</string-array>
</resources>
