<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory
		android:title="@string/cpu_board">
		<DropDownPreference
			android:key="qemu_system"
			android:title="@string/architecture"/>
		<DropDownPreference
			android:key="cpu"
			android:title="@string/cpu"/>
		<DropDownPreference
			android:key="machine"
			android:title="@string/machine"/>
		<EditTextPreference
			android:key="smp"
			android:title="@string/smp_cpus"
			android:dialogLayout="@layout/conf_smp"/>
		<SeekBarPreference
			android:key="m"
			android:title="@string/memory"
			android:max="2047"
			app:min="0"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/storage">
		<cn.qemu.launcher.preference.DiskPreference
			android:key="hda"
			android:title="@string/disk_a"
			app:fdf="fad"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="hdb"
			android:title="@string/disk_b"
			app:fdf="fad"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="hdc"
			android:title="@string/disk_c"
			app:fdf="fad"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="hdd"
			android:title="@string/disk_d"
			app:fdf="fad"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/removable_storage">
		<cn.qemu.launcher.preference.DiskPreference
			android:key="fda"
			android:title="@string/floppy_a"
			app:fdf="file"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="fdb"
			android:title="@string/floppy_b"
			app:fdf="file"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="cdrom"
			android:title="@string/cdrom"
			app:fdf="file"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/boot_options">
		<DropDownPreference
			android:title="@string/boot_device"
			android:key="boot"
			android:entries="@array/boot_first"
			android:entryValues="@array/boot_first_values"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="kernel"
			android:title="@string/kernel"
			app:fdf="file"/>
		<cn.qemu.launcher.preference.DiskPreference
			android:key="initrd"
			android:title="@string/initrd"
			app:fdf="file"/>
		<EditTextPreference
			android:key="append"
			android:title="@string/append"
			android:dialogLayout="@layout/conf_text"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/output_device">
		<DropDownPreference
			android:title="@string/display"
			android:key="vga"/>
		<android.support.v14.preference.MultiSelectListPreference
			android:key="soundhw"
			android:title="@string/soundhw"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/network">
		<DropDownPreference
			android:key="net_type"
			android:title="@string/network_type"
			android:entries="@array/net_types"
			android:entryValues="@array/net_type_values"/>
		<PreferenceScreen
			android:key="net_card"
			android:title="@string/network_card"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/display_options">
		<DropDownPreference
			android:key="graphics"
			android:title="@string/graphics_interface"
			android:entries="@array/graphics"
			android:entryValues="@array/graphics_values"/>
		<EditTextPreference
			android:key="port"
			android:title="@string/port"
			android:dialogLayout="@layout/conf_number"/>
	</PreferenceCategory>
	<PreferenceCategory
		android:title="@string/advanced">
		<CheckBoxPreference
			android:key="usb_tablet"
			android:title="@string/mouse_fixed"
			android:summary="-usb -device usb-tablet"/>
		<EditTextPreference
			android:key="exparms"
			android:title="@string/extra_params"
			android:dialogLayout="@layout/conf_text"/>
	</PreferenceCategory>
</PreferenceScreen>

