<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	<item android:title="@string/img_toolbox"
		android:icon="@drawable/ic_work_black_24dp">
		<menu>
			<item
				android:id="@+id/create"
				android:title="@string/create_new_img"
				android:icon="@drawable/ic_create_black_24dp"/>
			<item
				android:id="@+id/info"
				android:title="@string/img_info"
				android:icon="@drawable/ic_info_outline_black_24dp"/>
			<item
				android:id="@+id/size"
				android:title="@string/resize_img"
				android:icon="@drawable/ic_settings_black_24dp"/>
			<item
				android:id="@+id/convert"
				android:title="@string/convert_format"
				android:icon="@drawable/ic_swap_horiz_24"/>
		</menu>
	</item>
	<item
		android:id="@+id/install"
		android:title="@string/install_title"
		android:icon="@drawable/ic_add_black_24dp"/>
	<item
		android:id="@+id/remove"
		android:title="@string/remove_title"
		android:icon="@drawable/baseline_delete_24"/>
	<item
		android:id="@+id/log"
		android:title="@string/view_log"
		android:icon="@drawable/baseline_assignment_24"/>
	<item
		android:id="@+id/dres"
		android:title="@string/download_res"
		android:icon="@drawable/ic_file_download_black_24dp"/>
	<item
		android:id="@+id/ctap"
		android:title="@string/close_tap"
		android:icon="@drawable/ic_clear_black_24dp"/>
</menu>
