<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingLeft="?attr/dialogPreferredPadding"
	android:paddingRight="?attr/dialogPreferredPadding">

	<Spinner
		android:layout_height="wrap_content"
		android:id="@+id/net_type"
		android:layout_width="match_parent"/>

	<CheckBox
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:text="@string/advanced"
		android:id="@+id/net_advance"/>

	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		android:id="@+id/net_adlayout"
		android:visibility="gone">

		<android.support.design.widget.TextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:hint="@string/vlan">

			<android.support.design.widget.TextInputEditText
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/net_vlan"
				android:inputType="numberDecimal"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:hint="@string/name">

			<android.support.design.widget.TextInputEditText
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/net_name"/>

		</android.support.design.widget.TextInputLayout>

		<android.support.design.widget.TextInputLayout
			android:layout_height="wrap_content"
			android:hint="@string/mac_addr"
			android:layout_width="match_parent">

			<android.support.design.widget.TextInputEditText
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/net_mac"
				android:digits="0123456789ABCDEFabcdef:"/>

		</android.support.design.widget.TextInputLayout>

	</LinearLayout>

</LinearLayout>

