<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:paddingLeft="?attr/dialogPreferredPadding"
	android:paddingRight="?attr/dialogPreferredPadding">

	<include
		layout="@layout/inc_open"/>

	<LinearLayout
		android:layout_marginTop="16dp"
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="horizontal">

		<android.support.design.widget.TextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_weight="1">

			<EditText
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/output_name"
				style="@style/OneLineEdit"
				android:hint="@string/output_file_name"/>

		</android.support.design.widget.TextInputLayout>

		<Spinner
			android:layout_height="48dp"
			android:layout_width="wrap_content"
			android:id="@id/disk_format"
			android:entries="@array/disk_format"
			android:layout_gravity="bottom"
			style="@style/Widget.AppCompat.Spinner.Underlined"/>

	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="16dp"
		android:orientation="horizontal">

		<android.support.design.widget.TextInputLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:layout_weight="1">

			<EditText
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:id="@+id/outputdir"
				style="@style/OneLineEdit"
				android:hint="@string/output_dir"/>

		</android.support.design.widget.TextInputLayout>

		<Button
			android:layout_height="wrap_content"
			android:text="@string/open"
			android:layout_width="wrap_content"
			android:layout_gravity="bottom"
			android:id="@+id/opendir"/>

	</LinearLayout>

	<CheckBox
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/compress"
		android:id="@+id/compress"/>

</LinearLayout>

