<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:gravity="center"
	android:orientation="vertical">

	<ImageView
		android:id="@+id/imageView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:scaleType="centerInside"
		android:src="@mipmap/ic_launcher"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:gravity="center"
		android:text="@string/app_name"
		android:textSize="32sp"
		android:textStyle="bold"
		android:textAppearance="?android:attr/textAppearanceLarge"/>

	<TextView
		android:id="@+id/versionView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:text="@string/app_ver"
		android:textStyle="bold"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:textSize="14sp"/>

	<TextView
		android:id="@+id/about_text"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="20dp"
		android:clickable="true"
		android:gravity="center"
		android:text="@string/about_text"/>

</LinearLayout>

